feat(finanzas): ingresos reales y alertas

--- a/src/components/DonationGateway.astro
+++ b/src/components/DonationGateway.astro
@@ -246,6 +246,7 @@ const copPerUsd: number | null =
                 <option value="misiones">Misiones</option>
                 <option value="campus">Campus</option>
                 <option value="evento">Evento</option>
+                <option value="peregrinaciones">Peregrinaciones</option>
                 <option value="general">General</option>
               </select>
             </div>
@@ -503,6 +504,7 @@ const copPerUsd: number | null =
                 <option value="misiones">Misiones</option>
                 <option value="campus">Campus</option>
                 <option value="evento">Evento</option>
+                <option value="peregrinaciones">Peregrinaciones</option>
                 <option value="general">General</option>
               </select>
             </div>
